fix: changes to projects header style
fix: changes to open the resume as an open link to avoid safari not showing iframe

--- a/styles.scss
+++ b/styles.scss
@@ -45,7 +45,7 @@ body {
   @media screen and (max-width: $tablet) {
     width: 3rem;
     height: 3rem;
-    margin-block-start: 1rem;
+    margin-block-start: 0.8rem;
   }
 }
 
@@ -387,7 +387,7 @@ form {
 }
 
 .projects-container {
-  height: 100vh;
+  max-height: 100vh;
   width: 100%;
 
   a {
@@ -520,6 +520,7 @@ form {
 
 @media screen and (max-width: $tablet) {
   .projects-container .projects-header h2 {
+    margin-block-start: 1rem;
     font-size: 2.5rem;
 
     @media screen and (max-width: $phone) {
